--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -29,7 +29,7 @@ jobs:
       - name: Run a one-line script
         run: echo Hello, world!
 
-      # Runs a set of commands using the runners shell
+      # Prints guidance for building, testing, and deploying the project
       - name: Run a multi-line script
         run: |
           echo Add other actions to build,
